# nand2tet

./: .gitignore
1/: Mux.hdl  Mux4Way16.hdl  Mux8Way16.hdl  Or8Way.hdl  Xor.hdl
2/: ALU.hdl  FullAdder.hdl
3/a/: 2q  PC.hdl  RAM8.hdl  RAM8.out  Register.hdl
3/b/: RAM16K.hdl  RAM4K.hdl  RAM512.hdl
4/fill/: Fill.asm
4/mult/: Mult.asm
5/: CPU.hdl  Computer.hdl  Memory.hdl
6/add/: .Add.asm.swp
6/assembler/: Assembler  Assembler.cpp  CMakeLists.txt  command.txt
6/pong/: PongTest.asm
7/MemoryAccess/BasicTest/: BasicTest.asm
7/MemoryAccess/PointerTest/: PointerTest.asm
7/MemoryAccess/StaticTest/: StaticTest.asm
7/StackArithmetic/SimpleAdd/: SimpleAdd.asm  SimpleAdd.hack
7/StackArithmetic/StackTest/: .StackTest.vm.swp  StackTest.asm  StackTest.out
7/VM/: CodeWriter.h  Constants.h  Parser.h  VM  VM.cpp  notes.txt  vm_runner  vm_runner.cpp
7/VM/VM.dSYM/Contents/Resources/DWARF/: VM
8/FunctionCalls/FibonacciElement/: FibonacciElement.asm  SysMain.vm
8/FunctionCalls/NestedCall/: NestedCall.asm  NestedCall.out
8/FunctionCalls/SimpleFunction/: SimpleFunction.asm
8/FunctionCalls/StaticsTest/: StaticsTest.asm  SysClass12.vm
8/ProgramFlow/BasicLoop/: BasicLoop.asm
8/ProgramFlow/FibonacciSeries/: FibonacciSeries.asm
8/VM/: CMakeLists.txt  CodeWriter.h  Parser.h  VM  VM.cpp  VMRunner  notes.txt  vm_runner  vm_runner.cpp
8/VM/VM.dSYM/Contents/Resources/DWARF/: VM
8/VM/VM.dSYM/Contents/Resources/Relocations/aarch64/: VM.yml
8/VM/vm_runner.dSYM/Contents/: Info.plist
8/VM/vm_runner.dSYM/Contents/Resources/DWARF/: vm_runner
(+2 files in other folders)
